<resources>
    <string name="app_name">PrimeiroProjeto</string>


    <string name="titulo_cadastro">Novo Chamado</string>
    <string name="hint_titulo">Título do problema</string>
    <string name="hint_local">Local (Ex: Bloco A, Sala 10)</string>
    <string name="label_tipo">Tipo de Demanda:</string>
    <string name="hint_descricao">Descrição detalhada</string>
    <string name="btn_cadastrar">Cadastrar Chamado</string>

    <string-array name="tipos_chamado">
        <item>TI</item>
        <item>Infraestrutura</item>
    </string-array>

    <string-array name="status_opcoes">
        <item>Aberto</item>
        <item>Em Atendimento</item>
        <item>Concluído</item>
    </string-array>



</resources>